[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/birdScene1.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "enter"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -700.772, 140.421 ), Vector2( 100, 140.421 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "kiss"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Player:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 90.0, 180.0, 270.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "textCycle"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("voice:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0.294118 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.294118 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="voice" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -144.0
margin_top = -72.0
margin_right = 147.0
margin_bottom = 73.0
text = "Hello, yes, this is bird."
align = 1
valign = 1
autowrap = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="icon" type="Sprite" parent="."]
position = Vector2( -0.179688, 235.647 )
scale = Vector2( 20.0027, 1 )
texture = ExtResource( 2 )

[node name="Bird" type="Sprite" parent="."]
position = Vector2( 367.801, 61.5194 )
scale = Vector2( 0.511116, 0.574883 )
texture = ExtResource( 2 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( -700.772, 140.421 )
rotation = 6.28319
texture = ExtResource( 2 )

[node name="PlyAnim" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 1 )
anims/kiss = SubResource( 2 )
anims/textCycle = SubResource( 3 )

[node name="bgAnim" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 4 )
anims/fadeOut = SubResource( 5 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.294118 )
position = Vector2( -0.179745, 0.302513 )
scale = Vector2( 20.1303, 11.4579 )
texture = ExtResource( 2 )

[connection signal="animation_finished" from="PlyAnim" to="." method="_on_PlyAnim_animation_finished"]
[connection signal="animation_finished" from="bgAnim" to="." method="_on_bgAnim_animation_finished"]
